# sys101-s25-fedavg

./: Cargo.toml  README  README.md
client/: client.rs
server/: servers.rs
src/: client.rs  lib.rs  main.rs  protocol.rs  server.rs
