[package]
name = "candle-fedavg"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { version = "0.8.3" } 
candle-nn = { version = "0.8.3" }
candle-datasets = "0.8.3"
hf-hub = { version = "0.4.2", features = ["tokio"] }
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"